--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.1",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "moment": "^2.30.1",
     "mongoose": "^8.1.1",
     "morgan": "~1.9.1"
